created Responsive Web Page

--- a/index.html
+++ b/index.html
@@ -29,47 +29,52 @@
                 </p>
                 <button class="button">Sign Up</button>
             </div>  
-            <div class="placeholder">
-            </div>          
+            <img src="images/school.jpeg" alt="culinary school" class="placeholder">
+                      
         </div>
     </header>
     <section class="food-section">
-        <div class="container">
-            <div class="dishes">
-                <h1> Nigerian Traditional Dishes</h1>
-            </div>
-            <div class="food-boxes">
-                <div class="food"></div>
-                <p>subtext under an image</p>
-                <div class="food"></div>
-                <p>subtext under an image</p>
-                <div class="food"></div>
-                <p>subtext under an image</p>
-                <div class="food"></div>
-                <p>subtext under an image</p>
-                <div class="food"></div>
-                <p>subtext under an image</p>
+        <h1> Nigerian Traditional Dishes</h1>
+        <div class="container">    
+            <div class="food-images">
+                <div class="food">
+                    <img src="images/jollof.jpg" alt="jollof rice" class="jollof">
+                    <p>Jollof Rice
+                </div>
+                <div class="food">
+                    <img src="images/bitter-leaf.jpg" alt="jollof rice" class="jollof">
+                    <p>Bitter leaf Soup</p>
+                </div>
+                <div class="food">
+                    <img src="images/yam-porridge.jpg" alt="jollof rice" class="jollof">
+                    <p>Yam Porridge</p>
+                </div>
+                <div class="food">
+                    <img src="images/abacha.jpg" alt="jollof rice" class="jollof">
+                    <p>Abacha</p>
+                </div>
+                               
             </div>
         </div>
     </section>
-    <figure class="quote">
+    <div class="quote">
         <div class="container">
-            <blockquote>
+            <em class="quote-text">
                 Hunger is the cry of a god and two gods do the humans worship — the head and the stomach... 
                 We know the body will survive without Head sustenance, but the Stomach, 
                 the god that rumbles and thunders when sacrifice is late, this god cannot be slighted.
-            </blockquote>
-            <figcaption>
-                &mdash; Wole Soyinka, <cite>Salutations to the Gut</cite>
-            </figcaption>
+            </em>
+            <p class="author">-Wole Soyinka, Salutations to the Gut</p>
         </div>        
-    </figure>
-    <section class="latest-info">
+    </div>
+    <section class="info">
         <div class="container">
-            <p>Become an expert in Nigerian Dishes</p>
-            <p>Sign up to learn the best cooking skills Now!</p>
-            <button>Sign Up</button>
-        </div>     
+            <div class="signup-text">
+                <p>Become an expert in Nigerian Dishes!</p>
+                <p>Sign up to learn the best cooking skills Now!</p>
+            </div>
+            <button>Sign Up</button>   
+        </div>  
     </section>
     <footer class="footer">
         <div class="container">
